Fixed the portrait tablet and small desktop skillset square margin that would cause any fifth star on a skill to shift below the previous four stars.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -560,6 +560,10 @@ img.skill-icon {
     padding: 0px 75px;
   }
 
+  .square {
+    margin-right: 0.25em;
+  }
+
   div.social-link a i {
     font-size: 4em;
     padding-top: 0.1em;
